feat: update changelog template to include non-conventional commits

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -5,20 +5,20 @@ info:
   repository_url: https://github.com/jonataslaw/get
 options:
   commits:
-    # filters:
-    #   Type:
-    #     - feat
-    #     - fix
-    #     - remove
-    #     - deprecate
-    #     - refactor
+    filters:
+      Type:
+        - feat
+        - fix
+        - remove
+        - deprecate
+        - refactor
   commit_groups:
-    # title_maps:
-    #   feat: Addeed
-    #   fix: Fixed
-    #   remove: Removed
-    #   deprecate: Deprecated
-    #   refactor: Changed
+    title_maps:
+      feat: Addeed
+      fix: Fixed
+      remove: Removed
+      deprecate: Deprecated
+      refactor: Changed
   header:
     pattern: "^(\\w*)\\:\\s(.*)$"
     pattern_maps:
