get_created_feature done

--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/jonny/Android/Sdk
-flutter.sdk=/opt/flutter
+sdk.dir=C:\\Users\\SERVIDOR\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
