--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\SERVIDOR\\AppData\\Local\\Android\\sdk
+sdk.dir=/home/jonny/Android/Sdk
 flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
