--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/home/jonny/Android/Sdk
-flutter.sdk=C:\\flutter
+flutter.sdk=/opt/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
