--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ example/macos/Flutter/GeneratedPluginRegistrant.swift
 # Coverage files
 coverage/
 example_nav2/lib/auth/secrets.dart
+example_nav2/lib/auth/secrets.dart
