--- a/example_nav2/pubspec.yaml
+++ b/example_nav2/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   syncfusion_flutter_charts: ^19.3.59
   dart_lol:
     path: ../../dart_lol
+  timeago: ^3.1.0
   # dart_lol: ^0.2.0
 
 dev_dependencies:
