--- a/example_nav2/pubspec.yaml
+++ b/example_nav2/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dart_lol:
     path: ../../dart_lol
   timeago: ^3.1.0
+  get_it: ^7.2.0
   # dart_lol: ^0.2.0
 
 dev_dependencies:
