app should load most played champion for user on front page

--- a/example_nav2/pubspec.yaml
+++ b/example_nav2/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # linting in flutter
+  flutter_lints: ^1.0.4
 
 flutter:
   uses-material-design: true
