--- a/example_nav2/pubspec.yaml
+++ b/example_nav2/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     path: ../../dart_lol
   timeago: ^3.1.0
   get_it: ^7.2.0
+  palette_generator: ^0.3.3
   # dart_lol: ^0.2.0
 
 dev_dependencies:
