--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://www.dartlang.org/guides/libraries/private-files
-
-# See https://www.dartlang.org/guides/libraries/private-files
+# Mac
+.DS_Store
 
 # Files and directories created by pub
 .dart_tool/
