--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-# See https://www.dartlang.org/guides/libraries/private-files
-# Mac
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
 .DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
 
 # Files and directories created by pub
 .dart_tool/
