feat(lint): add flutter_lints to example

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   get:
     path: ../
+
+  flutter_lints: ^2.0.1
+  matcher:
   #get_test: ^3.13.3
 
 dev_dependencies:
