feat(lint): add flutter_lints to example_nav2

--- a/example_nav2/pubspec.yaml
+++ b/example_nav2/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     path: ../
   flutter:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  async:
+  flutter_lints: ^2.0.1
 
 dev_dependencies:
   flutter_test:
