--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,8 @@
 # Include option is buggy:
-include: package:lints/recommended.yaml
+include: package:flutter_lints/flutter.yaml
 # In case the include issue gets fixed, lines below INCLUDE_FIX
 # can be removed
+
+analyzer:
+  errors:
+    avoid_print: ignore
