--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [master]
   pull_request:
-    branches: [master]
+    branches: ["*"]
 #A workflow run is made up of one or more jobs. Jobs run in parallel by default.
 jobs:
   test:
