--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ homepage: https://github.com/jonataslaw/getx
 
 environment:
   sdk: ">=3.1.4 <4.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
