--- a/example_nav2/android/local.properties
+++ b/example_nav2/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=C:\\Users\\anike\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\normalguy\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\normalguy\\Downloads\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
